--- a/src/Sesile/CircuitBundle/Resources/views/Circuit/index.html.twig
+++ b/src/Sesile/CircuitBundle/Resources/views/Circuit/index.html.twig
@@ -2,7 +2,10 @@
 
 {% block content %}
     <div class="bloc_page">
-        <h1>Gestion des circuits</h1>
+        <div class="titre_page">
+            <span class="glyphicon glyphicon-retweet"></span>
+            &nbsp;&nbsp;&nbsp;Gestion des circuits
+        </div>
         {% include 'SesileCircuitBundle:Circuit:gestion.html.twig' %}
     </div>
 {% endblock %}
