--- a/web/css/style.css
+++ b/web/css/style.css
@@ -197,9 +197,21 @@ html, body {
 .selectedfile {
     border-color: #66afe9;
     outline: 2;
-    -webkit-box-shadow: inset 0 10px 10px rgba(0, 0, 0, 0.075), 0 0 20px rgba(102, 175, 233, 1.0);
-    box-shadow: inset 0 10px 10px rgba(0, 0, 0, 0.075), 0 0 20px rgba(102, 175, 233, 1.0);
+	-webkit-box-shadow: inset 0 7px 7px rgba(0, 0, 0, 0.075), 0 0 9px rgba(102, 175, 233, 1.0);
+	box-shadow: inset 0 7px 7px rgba(0, 0, 0, 0.075), 0 0 9px rgba(102, 175, 233, 1.0);
 
+}
+
+/*.bleudesmersdusud{*/
+/*outline: 0;*/
+/*-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);*/
+/*box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);*/
+/*}*/
+
+.bleudesmersdusud:active {
+	outline: 0;
+	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
 }
 
 /*-------------------------     DÉBUT MENU CONNEXION    -------------------------*/
