--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/new.html.twig
@@ -2,7 +2,10 @@
 
 {% block content %}
     <div class="bloc_page">
-        <div class="titre_page">Déposer un nouveau classeur</div>
+        <div class="titre_page">
+            <span class="glyphicon glyphicon-folder-open"></span>
+            &nbsp;&nbsp;&nbsp;Déposer un nouveau classeur
+        </div>
         <br>
 
         <form class="form-horizontal" role="form" action="{{ path('classeur_create') }}" method="POST">
