--- a/web/css/circuit.css
+++ b/web/css/circuit.css
@@ -2,6 +2,7 @@
 	display: table;
 	width: 100%;
 	text-align: center;
+	position: relative;
 }
 
 .selects_circuit {
@@ -78,12 +79,17 @@
 }
 
 .nametitle {
+	cursor: hand;
 	position: absolute;
-	width: 20%;
 	color: #a9a9a9;
+	line-height: 2em;
+	/*padding-left: 0.357em;*/
+	/*padding-top: 0.357em;*/
 }
 
 .nameinput {
+	/*height: 2em;*/
 	width: 100%;
-	padding-left: 20%;
+	height: 2em;
+	padding-left: 19%;
 }
