--- a/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
@@ -44,7 +44,7 @@
             </li>
             <li class="menu-elem menu-jaune">
                 <div class="entete-menu">
-                    <a href="#">
+                    <a href="{{ path("delegations_list") }}">
                         <div class="rectanglemenu" id="jauneclair"></div>
                         D&eacute;l&eacute;gations
                     </a>
