--- a/web/css/circuit.css
+++ b/web/css/circuit.css
@@ -16,6 +16,8 @@
 	border: 1px solid #cccccc;
 	text-align: left;
 	padding: .5em;
+    width: 80%;
+    margin: auto;
 }
 
 #users_list p:hover, #circuits_list p:hover {
@@ -25,9 +27,14 @@
 
 .titre_select {
 	text-align: center;
-	width: 100%;
 	border: 1px solid #ccccff;
 	border-bottom: 0px;
+    width: 100%;
+    margin: auto;
+}
+
+.top_selects_circuits .titre_select {
+    width: 80%;
 }
 
 #circuit {
