--- a/src/Sesile/DocumentBundle/Resources/views/Document/show.html.twig
+++ b/src/Sesile/DocumentBundle/Resources/views/Document/show.html.twig
@@ -13,7 +13,9 @@
                 Blablabla
             {% endif %}
         </div>
-        <div class="col-md-4"><h3>Contenu</h3></div>
+        <div class="col-md-4"><h3>Contenu</h3>
+            <img id="fileimgpreview">
+        </div>
         <div class="col-md-4">
             <div class="btn-group pull-right">
                 <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown">
@@ -32,9 +34,98 @@
             {% if doc is null %}
             removedropzonefile("{{ name }}");
             {% else %}
-
+            removefile("{{ name }}");
             {% endif %}
         });
+
+        {% if doc is null %}
+
+
+
+        {% else %}
+
+        $(this).attr("src", "{{ asset('bundles/sesiledocument/img/ICONS/BLANK/icon_blanc_256.png') }}");
+        //alert(
+        {{ doc.type }});
+        if ({{ doc.type }} == "application/pdf"
+        )
+        {
+
+            $(this).attr("src", "{{ asset('bundles/sesiledocument/img/ICONS/PDF/icon_pdf_256.png') }}");
+
+        }
+        if ({{ doc.type }} == "application/msword" ||
+        {{ doc.type }} ==
+        "application/vnd.openxmlformats-officedocument.wordprocessingml.document"
+        )
+        {
+
+            $(this).attr("src", "{{ asset('bundles/sesiledocument/img/ICONS/WORD/icon_doc_256.png') }}");
+
+        }
+
+        if ({{ doc.type }} == "application/zip"
+        )
+        {
+
+            $(this).attr("src", "{{ asset('bundles/sesiledocument/img/ICONS/ZIP/icon_zip_256.png') }}");
+
+        }
+
+        if ({{ doc.type }} == "image/png"
+        )
+        {
+
+            $(this).attr("src", "{{ asset('bundles/sesiledocument/img/ICONS/PNG/icon_png_256.png') }}");
+
+        }
+        if ({{ doc.type }} == "image/png"
+        )
+        {
+
+            $(this).attr("src", "{{ asset('bundles/sesiledocument/img/ICONS/PNG/icon_png_256.png') }}");
+
+        }
+
+        if ({{ doc.type }} == "image/jpeg"
+        )
+        {
+
+            $(this).attr("src", "{{ asset('bundles/sesiledocument/img/ICONS/JPG/icon_jpg_256.png') }}");
+
+        }
+
+        if ({{ doc.type }} == "text/xml"
+        )
+        {
+
+            $(this).attr("src", "{{ asset('bundles/sesiledocument/img/ICONS/XML/icon_xml_256.png') }}");
+
+        }
+
+        if ({{ doc.type }} == "application/vnd.ms-excel" ||
+        {{ doc.type }} ==
+        "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
+        )
+        {
+            $(this).attr("src", "{{ asset('bundles/sesiledocument/img/ICONS/XLS/icon_xls_256.png') }}");
+        }
+
+        if ({{ doc.type }} == "application/x-rar"
+        )
+        {
+            $(this).attr("src", "{{ asset('bundles/sesiledocument/img/ICONS/RAR/icon_rar_256.png') }}");
+        }
+
+        if ({{ doc.type }} == "text/plain"
+        )
+        {
+            $(this).attr("src", "{{ asset('bundles/sesiledocument/img/ICONS/TXT/icon_txt_256.png') }}");
+        }
+
+        {% endif %}
+
+
     </script>
 
 {% endif %}
