--- a/src/Sesile/CircuitBundle/Resources/views/Circuit/gestion.html.twig
+++ b/src/Sesile/CircuitBundle/Resources/views/Circuit/gestion.html.twig
@@ -13,7 +13,7 @@
                 <p data-id="{{ user.id }}">{{ user.username }}</p>
             {% endfor %}
         </div>
-        <span class="glyphicon glyphicon-chevron-down"></span>
+        <span id="useradd_btn" class="glyphicon glyphicon-chevron-down"></span>
     </div>
 
     <div class="selects_circuit">
@@ -28,19 +28,21 @@
                 <p data-id="{{ circuit.id }}" data-ordre="{{ circuit.ordre }}">{{ circuit.name }}</p>
             {% endfor %}
         </div>
-        <span class="glyphicon glyphicon-chevron-down"></span>
+        <span id="circuitadd_btn" class="glyphicon glyphicon-chevron-down"></span>
     </div>
 </div>
 
-<div class="titre_select">
-    <input class="form-control" id="name" name="name" placeholder="Titre du circuit">
+<div id="circuit_editor">
+    <div class="titre_select">
+        <input class="form-control" id="circuit_name" name="circuit_name" placeholder="Titre du circuit">
+    </div>
+    <div id="circuit"></div>
 </div>
-<div id="circuit"></div>
 
 <button class="btn  btn-success">
-    Enregistrer le nouveau circuit
+    Créer un nouveau circuit
 </button>
-<button class="btn  btn-success">
+<button id="circuit_modifier" class="btn  btn-success">
     Enregistrer les modifications
 </button>
 
@@ -52,6 +54,18 @@
     $("#users_list p").each(function () {
         users_list.push($(this).text());
     });
+
     $("#users_complete").autocomplete({ lookup: users_list });
+
+
+    $(".nameinput").focus(function () {
+        $(".glyphicon-search-blue").removeClass("glyphicon-search-blue");
+        $(this).prev("label").addClass("glyphicon-search-blue");
+    });
+
+    $("#users_list p, #circuits_list p").click(function () {
+        $(this).siblings(".list_selected_element").removeClass("list_selected_element");
+        $(this).addClass("list_selected_element");
+    });
 
 </script>
