Possibilité d'ajoute de nouveaux fichiers au classeur, changements de la vue d'un document

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
@@ -71,6 +71,7 @@
             $("#btn_modifier").click(function () {
                 $("#name, #desc").removeAttr("disabled");
                 $("#enregistrer_modif").show();
+                enableUploads();
 
             });
 
