Délégations : - enregistrement - ajout du champ délégant - datepicker améliorés
User :
- prise en compte de fireall.yml pour récup l'adresse du serveur cas (pas en dur dans le code)

Hiérarchie :
- intégration de jOrgChart
- modification du plugin pour ajouter les users en live

--- a/src/Sesile/DelegationsBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/DelegationsBundle/Resources/views/Default/index.html.twig
@@ -15,12 +15,12 @@
             {% for delegation in delegations %}
                 <tr>
                     <td>{{ delegation.user }}</td>
-                    <td>{{ delegation.debut | date('d-m-Y H:i:s') }}</td>
-                    <td>{{ delegation.fin | date('d-m-Y H:i:s') }}</td>
+                    <td>{{ delegation.debut | date('d-m-Y') }}</td>
+                    <td>{{ delegation.fin | date('d-m-Y') }}</td>
                     <td></td>
                 </tr>
             {% endfor %}
         </table>
-        <a href="{{ path('delegation_ajouter') }}">Déléguer ses droits</a>
+        <a href="{{ path('delegation_new') }}">Déléguer ses droits</a>
     </div>
 {% endblock %}
