--- a/src/Sesile/DelegationsBundle/Resources/views/Default/ajout.html.twig
+++ b/src/Sesile/DelegationsBundle/Resources/views/Default/ajout.html.twig
@@ -4,21 +4,24 @@
     <script type="text/javascript" src="{{ asset("/js/bootstrap-datepicker.js") }}"></script>
     <link rel="stylesheet" type="text/css" href="{{ asset("/css/datepicker.css") }}">
     <div class="bloc_page">
-        <form>
-            <select>
+        <form action="{{ path("delegation_create") }}" method="post">
+            <select name="user">
                 {% for user in users %}
                     <option value="{{ user.id }}">{{ user.Prenom }} {{ user.Nom }}</option>
                 {% endfor %}
             </select>
             <br>
-            <input class="datepicker" type="datetime"/>
+            <input class="datepicker" name="debut" type="datetime"/>
             <br>
-            <input class="datepicker" type="datetime"/>
+            <input class="datepicker" name="fin" type="datetime"/>
             <br>
             <button type="submit" class="btn btn-success">Enregistrer</button>
         </form>
     </div>
     <script type="text/javascript">
-        $('.datepicker').datepicker();
+        $('.datepicker').datepicker({
+            format: 'dd/mm/yyyy',
+            weekStart: 1
+        });
     </script>
 {% endblock %}
