Délégations : - Liste des délégation reçues - Suppression - Ajout fonctionnel

--- a/src/Sesile/DelegationsBundle/Resources/views/Default/ajout.html.twig
+++ b/src/Sesile/DelegationsBundle/Resources/views/Default/ajout.html.twig
@@ -11,17 +11,41 @@
                 {% endfor %}
             </select>
             <br>
-            <input class="datepicker" name="debut" type="datetime"/>
+            <input class="datepicker" id="deleg_debut" name="debut" type="datetime"/>
             <br>
-            <input class="datepicker" name="fin" type="datetime"/>
+            <input class="datepicker" id="deleg_fin" name="fin" type="datetime"/>
             <br>
             <button type="submit" class="btn btn-success">Enregistrer</button>
         </form>
     </div>
     <script type="text/javascript">
-        $('.datepicker').datepicker({
-            format: 'dd/mm/yyyy',
-            weekStart: 1
-        });
+        var nowTemp = new Date();
+        var now = new Date(nowTemp.getFullYear(), nowTemp.getMonth(), nowTemp.getDate(), 0, 0, 0, 0);
+
+        var checkin = $('#deleg_debut')
+                .datepicker({
+                    onRender: function(date) {
+                        return date.valueOf() < now.valueOf() ? 'disabled' : '';
+                    }
+                })
+                .on('changeDate', function(ev) {
+                    if (ev.date.valueOf() > checkout.date.valueOf()) {
+                        var newDate = new Date(ev.date)
+                        newDate.setDate(newDate.getDate() + 1);
+                        checkout.setValue(newDate);
+                    }
+                    checkin.hide();
+                    $('#deleg_fin')[0].focus();
+                }).data('datepicker');
+
+        var checkout = $('#deleg_fin')
+                .datepicker({
+                    onRender: function(date) {
+                        return date.valueOf() <= checkin.date.valueOf() ? 'disabled' : '';
+                    }
+                })
+                .on('changeDate', function(ev) {
+                    checkout.hide();
+                }).data('datepicker');
     </script>
 {% endblock %}
