--- a/src/Sesile/DelegationsBundle/Resources/views/Default/index_recues.html.twig
+++ b/src/Sesile/DelegationsBundle/Resources/views/Default/index_recues.html.twig
@@ -2,8 +2,7 @@
 
 {% block content %}
     <div class="bloc_page">
-        <h1>Délégations</h1>
+        <h1>Délégations reçues</h1>
         {% include 'SesileDelegationsBundle:Default:liste.html.twig' %}
-        <a href="{{ path('delegation_new') }}">Déléguer ses droits</a>
     </div>
 {% endblock %}
