--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -49,7 +49,7 @@
                                 <img class="userpicture"
                                      src="http://static.colourlovers.com/images/lovers/3522/3522185t.jpg?1387813886"/>
                                 &nbsp;
-                                {{ app.user.username }}&nbsp;&nbsp;&nbsp;
+                                {{ app.user.prenom }}&nbsp;{{ app.user.nom }}&nbsp;&nbsp;&nbsp;
                                 <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu menu_connexion" role="menu">
