--- a/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
@@ -51,13 +51,13 @@
                 <ul class="dd-menu">
                     <li>
                         <a href="{{ path("delegations_list") }}">
-                            <img class="arrows" src="{{ asset("/images/arrowblue.png") }}"/>
+                            <img class="arrows" src="{{ asset("/images/arrowyellow.png") }}"/>
                             Gérer les délégations
                         </a>
                     </li>
                     <li>
                         <a href="{{ path("delegations_recues_list") }}">
-                            <img class="arrows" src="{{ asset("/images/arrowblue.png") }}"/>
+                            <img class="arrows" src="{{ asset("/images/arrowyellow.png") }}"/>
                             délégations reçues
                         </a>
                     </li>
