--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -30,7 +30,9 @@
         {% endblock %}
     </head>
     <body>
-        <div id="maman">
+    <object id="winFirefoxPlugin" type="application/x-sharepoint" width="0" height="0"
+            style="visibility: hidden;"></object>
+    <div id="maman">
             <div id="gauche">
                 <a href="/app_dev.php">
                     <div id="logo">
